--- a/css.css
+++ b/css.css
@@ -25,17 +25,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 0px;
+    gap: 10px;
+    padding: 20px 10px;
 }
 
 .site_header>input {
     display: flex;
-    width: 964.672px;
+    width: 80%;
     height: 56.156px;
     padding: 12.033px 438.214px 12.033px 12.033px;
     align-items: flex-start;
     gap: 10.028px;
-    flex-shrink: 0;
     border-radius: 4.936px;
     border: 0.987px solid #454D4A;
 }
@@ -43,10 +43,132 @@ body {
 .site_header>input::placeholder {
     color: #DBDADA;
     font-family: Poppins;
-    font-size: 21.719px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     font-variant: all-small-caps;
 }
 
+.header_btn{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.header_btn  i{
+    font-size: 25px;
+    
+}
+
+
+/*   // header media */
+
+@media only screen and (max-width: 900px) {
+    .site_header>input {
+        display: flex;
+        width: 80%;
+        height: 46.156px;
+        padding: 12.033px 12.214px 12.033px 12.033px;
+        align-items: flex-start;
+        gap: 10.028px;
+        border-radius: 4.936px;
+        border: 0.987px solid #454D4A;
+    }
+
+    .site_header>input::placeholder {
+        color: #DBDADA;
+        font-family: Poppins;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        font-variant: all-small-caps;
+    }
+
+    .navbar_wrapper{
+        overflow: hidden;
+    }
+    
+}
+@media only screen and (max-width: 370px){
+    .site_header>input{
+        display: none;
+    }
+}
+
+
+
+
+.navbar{
+    padding-top: 30px;
+    display: flex;
+    align-items:start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.navbar > button{
+    width: 137.381px;
+    height: 40.111px;
+    flex-shrink: 0;
+    border-radius: 5.014px; 
+    border:none;
+    background-color: #a1a8a5;
+    color: #454D4A;
+    font-family: Poppins;
+    font-size: 20.056px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    font-variant: all-small-caps; 
+}
+
+.navbar_wrapper{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    gap: 33px;
+    /* flex-wrap: wrap; */
+
+}
+
+.navbar_box{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    gap: 20px;
+}   
+
+.navbar_box button{
+    width: 129.358px;
+    height: 43.119px;
+    border-radius: 5.014px;
+    border: 1.003px solid #000;
+    background: #F1F0F0;  
+    color: #454D4A;
+    text-align: start;
+    font-family: Poppins;
+    font-size: 15.042px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    font-variant: all-small-caps;  
+    padding-left: 5px;
+}
+
+.navbar_box button:hover{
+    background-color:#000;
+    color: #FFF;
+}
+
+.navbar_box img{
+    margin-left: -80px;
+}
+
+.navbar_box img:hover{
+    transform: scale(1.2);
+    transition: 1s all ease;
+}
